# ChangeLog for mail-client/notmuch
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  14 Aug 2010; James Rowe <jnrowe@gmail.com> notmuch-0.1.ebuild,
  notmuch-9999.ebuild:
  Merged live and released ebuilds.

  19 Jul 2010; James Rowe <jnrowe@gmail.com> notmuch-0.1.ebuild:
  Keyworded x86.

  10 Jun 2010; James Rowe <jnrowe@gmail.com> notmuch-0.1.ebuild,
  notmuch-9999.ebuild:
  Switched to using base.eclass' src_install.

  07 Apr 2010; James Rowe <jnrowe@gmail.com> notmuch-0.1.ebuild:
  Keyworded ~x86.

*notmuch-0.1 (07 Apr 2010)

  07 Apr 2010; James Rowe <jnrowe@gmail.com> +notmuch-0.1.ebuild:
  Version bump.

  07 Apr 2010; James Rowe <jnrowe@gmail.com> notmuch-9999.ebuild:
  Fixed DEPEND setting.

  14 Jan 2010; James Rowe <jnrowe@gmail.com> notmuch-9999.ebuild:
  Dropped keywords in live ebuild.

  05 Dec 2009; James Rowe <jnrowe@gmail.com> notmuch-9999.ebuild:
  Updates for today's notmuch configure/Makefile.config changes.

  02 Dec 2009; James Rowe <jnrowe@gmail.com> notmuch-9999.ebuild:
  gmime v2.4 is required.

  02 Dec 2009; James Rowe <jnrowe@gmail.com> notmuch-9999.ebuild:
  Updates for today's configure/Makefile.config changes.

  01 Dec 2009; James Rowe <jnrowe@gmail.com> notmuch-9999.ebuild:
  Manually install bash-completion script. Upstream no longer install it
  with the default target(since 7c2c26bc), and this works better anyway.

  30 Nov 2009; James Rowe <jnrowe@gmail.com> -files/50notmuch-gentoo.el,
  notmuch-9999.ebuild:
  Switch to autogenerated emacs autoload file.

  30 Nov 2009; James Rowe <jnrowe@gmail.com> notmuch-9999.ebuild:
  elisp-site-regen wasn't being run with portage due to inherit ordering.

  Thanks to Kevin Norland for reporting this, and encouraging me to test
  with portage more often ;)

  28 Nov 2009; James Rowe <jnrowe@gmail.com> notmuch-9999.ebuild,
  metadata.xml:
  Added support for installing the vim interface.

  22 Nov 2009; James Rowe <jnrowe@gmail.com> notmuch-9999.ebuild: