@@ -5,8 +5,8 @@ type: :feature
 component: misc-overlay
 release: current
 reporter: James Rowe <jnrowe@gmail.com>
-status: :unstarted
-disposition: 
+status: :closed
+disposition: :fixed
 creation_time: 2010-08-15 04:08:54.467943 Z
 references: []
 
@@ -15,6 +15,14 @@ log_events:
 - - 2010-08-15 04:08:55.123845 Z
   - James Rowe <jnrowe@gmail.com>
   - created
+  - ""
+- - 2010-08-23 22:14:10.111807 Z
+  - James Rowe <jnrowe@gmail.com>
+  - changed status from unstarted to in_progress
+  - ""
+- - 2010-08-23 22:35:35.455746 Z
+  - James Rowe <jnrowe@gmail.com>
+  - closed with disposition fixed
   - ""
 claimer: 
 git_branch: 
