@@ -2,14 +2,16 @@
 Hash: SHA1
 
 DIST notmuch-0.1.tar.gz 146322 RMD160 41b52b28a8553d1a9ba8e772787d5a65fb969798 SHA1 fa390b7e652bebbdd5c178a60d8056e662df03ba SHA256 7a29efb65cb4e744bdb1cc2fcfac4b38910d4f5318bd52592967c0f3dc0f1161
+DIST notmuch-0.3.tar.gz 239155 RMD160 3a53fea3b0835d37a02b8877bdce50f1a4f8466b SHA1 d65866323cb76b99fd3004c7f9af7f0e322743b3 SHA256 ab1a129b6d7641dba56a9c4b3a8e36c790eae9437df9d51cd11a26c05af05dcb
 EBUILD notmuch-0.1.ebuild 2098 RMD160 8f2e01dc105531c0d0dbb4dc5c314b39512151d9 SHA1 a31b5efb14428b9ee0300bd6748914076f36a2c0 SHA256 dad47c688d08625761464e76ea6eed6cfdb0e3846d92eff1ce8ddc0aec2d5a74
+EBUILD notmuch-0.3.ebuild 2320 RMD160 136cb63d1002f61b153b7557740952b507cb07ed SHA1 84699af4311eeb340257611e1a53762e3177a92f SHA256 656f1448a7b70b4950d2c0c3ebce2ff75ec1baaa2cb7c8faac7a141d4a1256b0
 EBUILD notmuch-9999.ebuild 2088 RMD160 7bc2ada03970e72b78b60f7ebb49acf8cc3b2eb3 SHA1 1a3eabe226638a3e04f2f97c836d4bbc7ffdd4a8 SHA256 057d352bb21cb2af1b9f1ba71e372f7e43b70375bcb2b346e614f4a8a7cbf376
-MISC ChangeLog 3043 RMD160 1c67b497b8360039a381f2513289ad3ad299b74b SHA1 d3fad2c478546d68e3bebffb506c975c90384219 SHA256 0bb518c3893f9b661e2fafdf3d0b9d3c364e781551fc4a15d61346251d7c9c04
+MISC ChangeLog 3160 RMD160 76bcb030e40c862c467867603a8e1cd55d1260f1 SHA1 602cc53c7d402bafba5c0f42012c9574bfac63a2 SHA256 7a0d20e718f28afcb175c879c25a0b75c425361bc40a4eaa3ba200dbc39f588c
 MISC metadata.xml 897 RMD160 436f9558ab188a98a79dee2b25afba0ce4660f97 SHA1 f31467190638f4b59034c19c855c798b919143f4 SHA256 9408059d62680198c500a7e4727352f9195602f4550fbd25e1962b3b953c74d7
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.15 (GNU/Linux)
+Version: GnuPG v2.0.16 (GNU/Linux)
 
-iEYEARECAAYFAkxl99UACgkQzJrj3cAXR0nIuACfU5BwB9IvhfDhuFpe4Xtegego
-1RcAniDa2egjAEgZiXfV4SwyPle1kmvI
-=anAu
+iEYEARECAAYFAkxy968ACgkQzJrj3cAXR0nz5ACbBzYfYnpnBeoEcf62Aue5ZrYp
+AdIAoJjQHERqghC9yXcAedNGgCxArqFI
+=eVV7
 -----END PGP SIGNATURE-----
