@@ -1,0 +1,22 @@
+dev-util/pkgconfig debug? ( dev-util/valgrind ) sys-libs/talloc >=dev-libs/gmime-2.4 dev-libs/xapian emacs? ( virtual/emacs ) vim? ( || ( app-editors/vim app-editors/gvim ) ) zsh-completion? ( app-shells/zsh )
+sys-libs/talloc >=dev-libs/gmime-2.4 dev-libs/xapian emacs? ( virtual/emacs ) vim? ( || ( app-editors/vim app-editors/gvim ) ) zsh-completion? ( app-shells/zsh ) bash-completion? ( app-admin/eselect )
+0
+http://notmuchmail.org/releases/notmuch-0.3.tar.gz
+
+http://notmuchmail.org/
+GPL-3
+Thread-based email index, search and tagging.
+~amd64 ~x86
+base bash-completion elisp-common eutils multilib portability toolchain-funcs
+X debug emacs vim zsh-completion bash-completion
+
+bash-completion? ( app-shells/bash-completion )
+
+3
+
+compile configure install postinst postrm prepare unpack
+
+
+
+
+
