@@ -23,5 +23,7 @@ REM 2010-10-10 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 www-apps/mnemosyne-0.1
 REM 2010-10-10 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 www-apps/mnemosyne-0.12 %a
 REM 2010-10-12 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 dev-python/rstctl-0.4 %a
 REM 2010-10-12 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 dev-python/rstctl-0.4 %a
+REM 2010-09-22 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 mail-client/notmuch-0.3 %a
+REM 2010-09-22 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 mail-client/notmuch-0.3 %a
 
 # vim: set sw=4 sts=4 et tw=120 fenc=utf-8 ft=remind:
