@@ -2,6 +2,11 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*notmuch-0.3 (23 Aug 2010)
+
+  23 Aug 2010; James Rowe <jnrowe@gmail.com> +notmuch-0.3.ebuild:
+  Version bump [6aa].
+
   14 Aug 2010; James Rowe <jnrowe@gmail.com> notmuch-0.1.ebuild,
   notmuch-9999.ebuild:
   Merged live and released ebuilds.
